--- a/src/Components/Signin/Signin.css
+++ b/src/Components/Signin/Signin.css
@@ -3,7 +3,6 @@ body {
   margin: 0;
   padding: 0;
   height: 100vh;
-  /* You can remove this if you don't want a default background color */
 }
 
 .login-wrapper {
@@ -16,9 +15,6 @@ body {
   background-size: cover;
 }
 
-
-
-
 .login-container {
   display: flex;
   justify-content: center;
@@ -29,7 +25,7 @@ body {
 .login-box {
   width: 400px;
   padding: 20px;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.8); /* 80% opacity white */
   border-radius: 10px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   text-align: center;
@@ -105,5 +101,5 @@ body {
 }
 
 .social-button.facebook { background-color: #3b5998; color: white; }
-.social-button.google { background-color: #db4437; color: white; }
+social-button.google { background-color: #db4437; color: white; }
 .social-button.twitter { background-color: #1da1f2; color: white; }
